<?xml version="1.0" encoding="utf-8"?>

<!--注意LinearLayout中组件居中用layout_gravity，RelativeLayout中用layout_centerInParent-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_2"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/top_1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/background_1">
        <!--        <ImageView-->
        <!--            android:id="@+id/iv_loginactivity_back"-->
        <!--            android:layout_width="30dp"-->
        <!--            android:layout_height="30dp"-->
        <!--            android:background="@drawable/ic_left_back"-->
        <!--            android:layout_centerVertical="true"-->
        <!--            android:layout_marginLeft="10dp"-->
        <!--            android:clickable="true"-->
        <!--            android:onClick="onClick" />-->

        <TextView
            android:id="@+id/login_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/tv_loginactivity_login"
            android:textColor="@color/font_1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/register_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/register_1"
            android:textColor="@color/font_1"
            android:textSize="20sp" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/LinearLayout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/top_1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_loginactivity_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"/>
            <EditText
                android:id="@+id/username_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_loginactivity_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password1"/>
            <EditText
                android:id="@+id/password_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password2"
                android:inputType="textPassword"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/login_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout_1"
        android:layout_margin="20dp"
        android:gravity="center"
        android:onClick="onClick"
        android:background="@color/background_1"
        android:textColor="@color/font_2"
        android:textSize="25sp"
        android:text="@string/tv_loginactivity_login" />
</RelativeLayout>