<?xml version="1.0" encoding="utf-8"?>

<!--注意LinearLayout中组件居中用layout_gravity，RelativeLayout中用layout_centerInParent-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.swufe.loanapp.RegisterActivity"
    android:background="@color/background_2"
    >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/background_1"
        >
        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_left_back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:onClick="onClick" />

        <TextView
            android:id="@+id/tv_registeractivity_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_1"
            android:textColor="@color/font_1"
            android:textSize="20dp"
            android:layout_toRightOf="@+id/back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/top"
        android:layout_margin="10dp">
<!--        用户名-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_registeractivity_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/username"/>
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_height="50dp"
                android:hint="@string/username_2"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp" />
        </LinearLayout>
<!--        密码,android:digits控制只能输入字母、数字-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_registeractivity_password1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/password1"/>
            <EditText
                android:id="@+id/password_1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:inputType="textPassword"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/password2" />
        </LinearLayout>
<!--        重复密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_registeractivity_password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/password1"/>
            <EditText
                android:id="@+id/password_2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password_3"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:inputType="textPassword"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyz"/>
        </LinearLayout>
<!--        验证码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >
<!--            输入验证码-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_registeractivity_phoneCodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/verification_code"/>

<!--                将width设为0,用weight分配剩余空间-->
                <EditText
                    android:id="@+id/input_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    android:hint="@string/code_hint"
                    android:inputType="text" />

                <ImageView
                    android:id="@+id/verification_code"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="2"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:layout_marginTop="-10dp" />
            </LinearLayout>
        </LinearLayout>
        <!-- 注册按钮 -->
        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/register_button"
            android:textColor="@color/background_2"
            android:textSize="30sp"
            android:text="@string/register_1"
            android:onClick="onClick"
            android:layout_marginTop="40dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/agreement"
            android:layout_margin="10dp">
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>