<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.swufe.loanapp.MainActivity">
    <RelativeLayout
        android:id="@+id/top_2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/background_1">
    </RelativeLayout>

    <TextView
        android:id="@+id/attention"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/attention"
        android:textColor="@color/font_1"
        android:textSize="20dp" />

    <ListView
        android:id="@+id/myList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="10">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/look"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/background_1"
                android:text="@string/look"
                android:textColor="@color/font_2"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/logout"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/background_1"
                android:text="@string/logout"
                android:textColor="@color/font_2"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>